--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://brasilprev.c3kchwu59dlj.us-east-1.rds.amazonaws.com:3306/brasilprev
-spring.jpa.generate-ddl=true
-spring.datasource.username=admin
-spring.datasource.password=adminadmin
+spring.datasource.url=
+spring.jpa.generate-ddl=
+spring.datasource.username=
+spring.datasource.password=
 
 
 server.port=8081
